@@ -1,5 +1,10 @@
 2002-10-18  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/mainwindow.cc: Make the TextView non-editable if no file
+	is loaded.
+
+2002-10-18  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* configure.ac: Require sigc++ >= 1.2.1 and gtkmm >= 1.3.27.
 
 2002-10-16  Daniel Elstner  <daniel.elstner@gmx.net>
